--- a/pages/index.css
+++ b/pages/index.css
@@ -2,4 +2,20 @@
 @import url(../vendor/normalize.css);
 /* add fonts */
 @import url(../vendor/fonts/ttlakes.css);
+/* page */
+@import url(../blocks/page/page.css);
+/* section title */
+@import url(../blocks/section-title/section-title.css);
 /* brands */
+@import url(../blocks/brands-container/brands-container.css);
+@import url(../blocks/brands-container/__title/brands-container__title.css);
+@import url(../blocks/brands-container/__list/brands-container__list.css);
+@import url(../blocks/brands-container/__element/brands-container__element.css);
+@import url(../blocks/brands-container/__image/brands-container__image.css);
+@import url(../blocks/brands-container/__go/brands-container__go.css);
+
+@import url(../blocks/read-more/read-more.css);
+
+
+
+
