--- a/blocks/read-more/read-more.css
+++ b/blocks/read-more/read-more.css
@@ -4,33 +4,29 @@
   font-weight: 600;
   height: 24px;
   align-items: center;
-  margin: 16px 0 0 31px;
+  margin: 16px 0 0 24px;
   cursor: pointer;
   transition: opacity .3s;
+  letter-spacing: -0.2px;
+  
 }
 
 .read-more:hover {
   opacity: 0.6;
 }
 
-.read-more::before {
+/* .read-more::before {
   content: '';
   position: absolute;
   margin-left: -30px;
   width: 24px;
   height: 24px;
   background: url(../../../images/expand.svg);
-}
-
-@media screen and (min-width: 520px) {
-  .read-more {
-    margin: 10px 0 0 31px;
-  }
-}
+  /* transform: rotate(-180deg); 
+} */
 
 @media screen and (min-width: 880px) {
   .read-more {
-    margin-top: 12px;
-    letter-spacing: -0.2px;
+    margin-left: 32px; 
   }
 }
