--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -12,7 +12,8 @@
 
   @media screen and (min-width: 520px) {
     .section-title {
-      padding: 16px auto 16px 24px;
+      width: 100%;
+      padding: 16px 0 16px 24px;
       height: 56px;
     }
   }
