--- a/blocks/brands-container/__element/brands-container__element.css
+++ b/blocks/brands-container/__element/brands-container__element.css
@@ -1,11 +1,20 @@
 .brands-container__element {
   background-color: #FFFFFF;
-  width: 240px;
   height: 72px;
   box-sizing: border-box;
   border: 1px solid #EAEAEA;
   border-radius: 5px;
   display: flex;
+}
+
+@media screen and (min-width: 520px) {
+  .brands-container__element {
+    width: 224px;
+    display: flex;
+    flex-wrap: wrap;
+    /* gap: 16px; */
+    height: 72px;
+  }
 }
 
 @media screen and (min-width: 880px) {
