--- a/blocks/brands-container/__list/brands-container__list.css
+++ b/blocks/brands-container/__list/brands-container__list.css
@@ -1,19 +1,29 @@
 .brands-container__list {
-  list-style: none;
-  margin: 24px 32px;
+  list-style: none; 
+  margin: 16px 16px;
   padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px 32px;
+}
+
+.brands-container__list::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+@media screen and (min-width: 520px) {
+  .brands-container__list {
+    margin: 24px 24px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px 24px;
+    height: 160px;
+    /* justify-content: space-between; */
+    overflow: hidden;
+  }
 }
 
 @media screen and (min-width: 880px) {
   .brands-container__list {
-    list-style: none;
-    margin: 24px 32px;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
     gap: 16px 32px;
+    margin: 24px 32px;
   }
 }
