--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,8 @@
 @import url(../blocks/brands-container/__go/brands-container__go.css);
 
 @import url(../blocks/read-more/read-more.css);
+@import url(../blocks/read-more/__icon/read-more__icon.css);
+@import url(../blocks/read-more/__text/read-more__text.css);
 
 
 
