--- a/blocks/brands-container/__go/brands-container__go.css
+++ b/blocks/brands-container/__go/brands-container__go.css
@@ -2,6 +2,7 @@
   width: 40px;
   height: 40px;
   margin: auto 16px auto auto;
+  transition: transform .3s;
 }
 
 @media screen and (min-width: 880px) {
