--- a/blocks/brands-container/__list/brands-container__list.css
+++ b/blocks/brands-container/__list/brands-container__list.css
@@ -1,5 +1,27 @@
+@keyframes open {
+  from {
+    height: 160px;
+  }
+
+  to {
+    height: 248px;
+  }
+}
+
+@keyframes close {
+  from {
+    height: 248px;
+  }
+
+  to {
+    height: 160px;
+  }
+}
+
+
 .brands-container__list {
-  list-style: none; 
+  height: 160px;
+  list-style: none;
   margin: 16px 16px;
   padding: 0;
 }
@@ -15,8 +37,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 16px 24px;
-    height: 160px;
-    /* justify-content: space-between; */
     overflow: hidden;
   }
 }
