--- a/blocks/brands-container/brands-container.css
+++ b/blocks/brands-container/brands-container.css
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 880px) {
   .brands-container {
-    width: 1120px;
+    max-width: 1120px;
     margin: auto;
   }
 }
