--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -21,7 +21,7 @@
   @media screen and (min-width: 880px) {
     .section-title {
       padding-left: 32px;
-      width: 1120px;
+      max-width: 1120px;
       margin: auto;
     }
   }
